monte carlo simulation code added